# space-game

./: .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  compile_commands.json  docker-compose.yml  find_unsafe_gets.py  fix_render.py  nginx-config.conf  otel-collector-config.yaml  readme.md  signoz-connection.yaml  test_remove.cpp
.agent/: instructions.md
.agent/workflows/: discovery.md  greenfield.md  review.md
.agents/: instructions.md  readme.md  unified-change.md
.agents/workflows/: conflict-resolution.md  doc-refinement.md  pattern-intake.md  primary-agent-elicitation.md  ralph-wiggum-loop.md  triage.md  unified-change.md
.github/: copilot-instructions.md
build_fix/: CMakeCache.txt
build_fleet/: CMakeCache.txt
build_new/: CMakeCache.txt
build_resilient/: CMakeCache.txt
build_test/: CMakeCache.txt
build_verify/: CMakeCache.txt
docs/: readme.md
docs/architecture/: blueprint-system.md  readme.md  space-game-context.md
docs/architecture/capability/: agent-orchestration.md  combat.md  economy.md  governance-enforcement.md  navigation.md  observability.md  operational-reliability.md  readme.md  repository-consumption.md  ship-modular-system.md  ui-framework.md
docs/architecture/infrastructure/: telemetry-stack.md
docs/architecture/module/: agent-workflows.md  core-main.md  developer-patterns.md  doc-system.md  engine-combat.md  engine-physics.md  engine-rendering.md  engine-systems.md  engine-telemetry.md  external-pillar.md  fleet-diagnostics.md  game-combat.md  game-core.md  game-economy.md  game-factions.md  game-hull.md  game-modules.md  game-npc.md  game-ui.md  governance-protocols.md  governance-standards.md  hull-generation.md  operational-pillar.md  physics.md  readme.md  rendering-main.md  ship-generation.md  src-core.md  system-gate.md
docs/architecture/patterns/: verification-patterns.md
docs/architecture/standard/: verification-governance.md
docs/developer/: readme.md  test-environment.md
docs/developer/pattern/: agent-dual-role-orchestration.md  agent-iterative-compliance-loop.md  agent-protocol-delegation.md  ammunition-management.md  attribute-differentiated-recipes.md  blueprint-round-trip.md  boarding-protocol.md  box2d-contact-events.md  centralized-entity-lookup.md  cicd-fetchcontent-dependency.md  cicd-hybrid-dependency-acquisition.md  cicd-immutable-artifact.md  cicd-isolated-build.md  cicd-prioritized-testing.md  cicd-reproducible-build.md  cicd-secret-vaulting.md  cicd-shadow-build.md  cicd-test-layering.md  cicd-vulnerability-scan.md  cmake-conditional-test-gate.md  cmake-object-library-sharing.md  component-driven-initialization.md  cpp-centralized-typedefs.md  cpp-compiler-driven-refactoring.md  cpp-component-aggregation.md  cpp-component-registration.md  cpp-ecs-component.md  cpp-ecs-system-static.md  cpp-explicit-namespace-resolution.md  cpp-external-api-facade.md  cpp-header-hygiene.md  cpp-header-resilience.md  cpp-interface-segregation.md  cpp-sdk-type-completion.md  cpp-singleton-manager.md  cpp-standard-alignment.md  cpp-structural-integrity.md  cpp-type-safe-handles.md  cpp-visibility-promotion.md  definition-of-done.md  (+113 more)
docs/developer/standard/: operational-stability-standard.md  readme.md
docs/developer/workflow/: getting-started.md  readme.md
docs/governance/: agent-manifest.md  copilot-manifest.md  effective-usage-analysis.md  readme.md
docs/governance/protocol/: discovery.md  (+15 more)
docs/operational/: readme.md
scripts/: jaeger.sh  launch.sh  verify_dod.cpp  verify_resources.cpp  verify_viability_baseline.cpp
scripts/governance/: protocol-turbo.sh  rwl-build-test.sh
src/: main.cpp  readme.md
src/core/: readme.md
src/engine/: readme.md
src/game/: EconomyManager.cpp  EconomyManager.h  FactionManager.cpp  FactionManager.h  NPCShipManager.cpp  NPCShipManager.h  ShipOutfitter.cpp  ShipOutfitter.h  TradeManager.h  WorldLoader.cpp  WorldLoader.h  readme.md
src/rendering/: FleetOverlay.cpp  FleetOverlay.h  InfoPanel.cpp  InfoPanel.h  LandingPanel.h  LandingScreen.cpp  LandingScreen.h  MainRenderer.cpp  MainRenderer.h  MarketPanel.cpp  MarketPanel.h  OutfitterPanel.cpp  OutfitterPanel.h  ReequipPanel.cpp  ReequipPanel.h  RenderSystem.cpp  RenderSystem.h  ShipRenderer.cpp  ShipRenderer.h  ShipyardPanel.cpp  ShipyardPanel.h  UIUtils.cpp  UIUtils.h  VesselHUD.cpp  VesselHUD.h  readme.md
tests/: test_ammo.cpp  test_blueprint_extraction.cpp  test_blueprint_viability.cpp  test_collisions.cpp  test_economy.cpp  test_economy_full.cpp  test_economy_valuation.cpp  test_fleet_overlay.cpp  test_fleet_robustness.cpp  test_gravity.cpp  test_kinematics.cpp  test_module_pricing.cpp  test_module_quality.cpp  test_module_scaling.cpp  test_npc_missions.cpp  test_resource_management.cpp  test_ship_alignment.cpp  test_ship_evolution.cpp  test_shipless_player.cpp  test_spawn_variety.cpp  test_startup.cpp  test_ui_scrolling.cpp  test_weapon_attributes.cpp  test_weapons.cpp  test_world_loader.cpp  test_world_seeding.cpp  verify_hull_geometry.cpp
(+109 files in other folders)
